fix margin on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,7 +129,7 @@ a:hover {
 @media only screen and (max-width: 700px) {
   .nameText {
     font-size: 42px;
-    margin-top: 90px;
+    margin-top: 75px;
     line-height: 1.25;
     opacity: 1;
     font-weight: bolder;
